--- a/marketing.html
+++ b/marketing.html
@@ -941,7 +941,7 @@
         <span></span>
       </button>
       <ul class="nav-menu" id="nav-menu">
-        <li><a href="index.html#accueil" class="nav-link">Accueil</a></li>
+        <li><a href="https://digital-porokhane.com/" class="nav-link">Accueil</a></li>
         <li><a href="a-propos.html" class="nav-link">À propos</a></li>
         <li class="nav-item">
           <a href="formations.html" class="nav-link">Formations <i class="fas fa-chevron-down"></i></a>
