--- a/accompagnement.html
+++ b/accompagnement.html
@@ -1091,6 +1091,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li><a href="automatisation.html" class="submenu-link">Automatisation</a></li>
             <li><a href="base_donnee.html" class="submenu-link">Bases de données</a></li>
             <li><a href="ia.html" class="submenu-link">Intelligence Artificielle</a></li>
+            <li><a href="erp.html" class="submenu-link">ERP</a></li>
           </ul>
         </li>
         <li><a href="blog.html" class="nav-link">Actualités</a></li>
